Ensure long words and URLs break and wrap to the next line instead of causing overflows (#159)

--- a/src/theme-template.css
+++ b/src/theme-template.css
@@ -44,6 +44,8 @@ body {
 /* Style the message contents themselves */
 .twitch-chat-message {
 	/* Message contents styles here */
+
+	word-break: break-word;
 }
 
 /* Style chat emotes */
